sf-hrms/force-app/main/default/objects/Payslip__c/Payslip__c.object-meta.xml
<CustomObject>
    <label>Payslip</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Payslip ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payslips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>