sf-hrms/force-app/main/default/objects/Payslip__c/fields/Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Conveyance__c</fullName>
    <label>Conveyance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>