sf-hrms/force-app/main/default/objects/Payslip__c/fields/ESI__c.field-meta.xml
<CustomField>
    <fullName>ESI__c</fullName>
    <label>ESI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>