sf-hrms/force-app/main/default/objects/Payslip__c/fields/Net_Pay__c.field-meta.xml
<CustomField>
    <fullName>Net_Pay__c</fullName>
    <label>Net Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>