sf-hrms/force-app/main/default/objects/Payslip__c/fields/Paid_On__c.field-meta.xml
<CustomField>
    <fullName>Paid_On__c</fullName>
    <label>Paid On</label>
    <type>Date</type>
</CustomField>