sf-hrms/force-app/main/default/objects/Payslip__c/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <label>PF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>