sf-hrms/force-app/main/default/objects/Payslip__c/fields/Professional_Tax__c.field-meta.xml
<CustomField>
    <fullName>Professional_Tax__c</fullName>
    <label>Professional Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>