sf-hrms/force-app/main/default/objects/Payslip__c/fields/Special__c.field-meta.xml
<CustomField>
    <fullName>Special__c</fullName>
    <label>Special</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>